--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,13 @@ python:
   - "3.6"
   - "3.7-dev"
   - "nightly"
+  - "pypy3.5"
+
+install:
+ travis_retry pip install coverage coveralls
 
 script:
-  - python test_cologne_phonetics.py
+  - python -m coverage run --source=cologne_phonetics test_cologne_phonetics.py
+
+after_success:
+- coveralls
