--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,10 @@ python = ">=3.6.2"
 
 [tool.poetry.dev-dependencies]
 black = "^21.7b0"
+mypy = "^0.910"
+
+[tool.mypy]
+strict = true
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
