--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,14 @@ version = "1.3.0"
 description = "Python implementation of the cologne-phonetics algorithm"
 authors = ["Janek Nouvertné"]
 license = "MIT"
+readme = "README.rst"
+classifiers = [
+    "Programming Language :: Python :: 3.6",
+    "Programming Language :: Python :: 3.7",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10"
+]
 
 [tool.poetry.dependencies]
 python = ">=3.6.2"
